--- a/views/ctf/home/index.ejs
+++ b/views/ctf/home/index.ejs
@@ -16,8 +16,9 @@
                 <th>Code</th>
                 <th>Tags</th>
                 <th>Description</th>
-                <th>Bought</th>
-                <th></th>
+                <th style="text-align: center">Approved</th>
+                <th style="text-align: center"></th>
+                <th style="text-align: center"></th>
             </tr>
             <% if (output && output.products) { for(var i=0; i<output.products.length; i++) { %>
             <tr>
@@ -26,9 +27,22 @@
                 <td><%- output.products[i].code %></td>
                 <td><%- output.products[i].tags %></td>
                 <td><%- output.products[i].description %></td>
-                <td><%- output.products[i].isBought %></td>
-                <td>
-                    <a href='/ctf/edit-document?id=<%=output.products[i].id%>'>Edit</a>
+                <td style="text-align: center">
+                    <% if (!output.products[i].isSigned) { %> 
+                        </i> <a href='/ctf/documents-to-sign'><i style="color:coral;" class="fa fa-times"></i> Approve now!</a>
+                    <% } else { %>
+                        <i style="color:green;" class="fa fa-check"></i>
+                    <% } %>
+                </td>
+                <td style="text-align: center">
+                    <% if (!output.products[i].isSigned) { %> 
+                        <a href='/ctf/edit-document?id=<%=output.products[i].id%>'><i class="fa fa-pencil"></i> Edit</a>
+                    <% } else { %>
+                        <a href="/ctf/download-document?id=<%=output.products[i].id%>"><i class="fa fa-download"></i> Download</a>
+                    <% } %>
+                </td>
+                <td style="text-align: center">
+                    <a href="/ctf/download-document?id=<%=output.products[i].id%>"><i class="fa fa-trash"></i> Delete</a>
                 </td>
             </tr>
             <% } }%>
