--- a/views/ctf/diary/index.ejs
+++ b/views/ctf/diary/index.ejs
@@ -6,7 +6,7 @@
     </tr>
     <tr>
         <td style="text-align: center;"><p>06/12/2018</p></td>
-        <td><p>Damn, I need money as fast as possible... Maybe I should get some secret docs and sell the info.</p></td>
+        <td><p>Damn, I need money ASAP... Maybe I should go get some secret docs and sell the info.</p></td>
     </tr>
     <tr>
         <td style="text-align: center;"><p>13/01/2019</p></td>
