renames contracts to flags

--- a/views/common/attackHeader.ejs
+++ b/views/common/attackHeader.ejs
@@ -43,13 +43,13 @@
     <% } %>
 </li>
 <li class="borderLeft borderRight">
-    <% if(path === '/ctf/contracts'){ %>
-        <a style="color:white" href='/ctf/contracts'>
-            <i class="fa fa-file"></i> Contracts
+    <% if(path === '/ctf/flags'){ %>
+        <a style="color:white" href='/ctf/flags'>
+            <i class="fa fa-flag"></i> Flags
         </a>
     <% } else{%>
-        <a href='/ctf/contracts'>
-            <i class="fa fa-file"></i> Contracts
+        <a href='/ctf/flags'>
+            <i class="fa fa-flag"></i> Flags
         </a>
     <% } %>
 </li>
