--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -120,6 +120,8 @@ a {
     float: left;
 }
 
+/* I learned CSS! Here's part 2/3 of the flag: ct0r_ */
+
 .code {
     background: #545b6c;
     color: #fafafa;
@@ -176,3 +178,5 @@ a {
         width: 280px;
     }
 }
+
+
