--- a/views/common/attackHeader.ejs
+++ b/views/common/attackHeader.ejs
@@ -63,7 +63,7 @@
         <% } %>
     </a>
 </li>
-
+<!-- I learned HTML! Here's part 1/3 of the flag: flag{ur_4_real_1nspe -->
 <script>
     var isAdmin = <%= admin %>;
     if (!isAdmin) {
