--- a/views/ctf/flags/index.ejs
+++ b/views/ctf/flags/index.ejs
@@ -2,7 +2,7 @@
 <table class='table'>
     <tr>
         <th style="text-align: center;">#</th>
-        <th>Mission</th>
+        <th>Solve</th>
         <th style="text-align: center;">$$$</th>
         <th style="text-align: center;">Done</th>
         <th style="text-align: center;">Flag</th>
@@ -10,7 +10,7 @@
     </tr>
     <tr>
         <th style="text-align: center;">1</th>
-        <td><p>Damn, I need money ASAP... Maybe I should go get some secret docs and sell the info.</p></td>
+        <td><p>Inpect the code</p></td>
         <td style="text-align: center;"><p>600 €</p></td>
         <td style="text-align: center;"><i style="color:red;" class="fa fa-times"></i></td>
         <td><input /></td>
