--- a/views/common/head.ejs
+++ b/views/common/head.ejs
@@ -13,6 +13,7 @@
 
 <script src='/assets/js/jquery-3.2.1.min.js'></script>
 <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/assets/js/app.min.js"></script>
 <script type="text/javascript" src="/assets/js/bootstrapValidator.js"></script>
 
 <link id="bootstrap_styles" rel="stylesheet" href="/assets/css/bootstrap.min.css" type="text/css"/>
